# talks-dbt

./: .gitignore  README.md
2024/cookiecuttr/: dracula.css  index.html  nord.css
2024/dsinx/: index.html  particles.css  particlesjs-config.json  style.css
2024/funprog/: functor.py  index.html  nord.css  nord.hl.css
2024/funprog/highlight/: DIGESTS.md  highlight.js
2024/when-llms-attack/: horizon.css  index.html  nord.hl.css
2024/when-llms-attack/highlight/: highlight.min.js
2025/when-regex-fails/: flake.nix  guide.md  horizon.css  horizon.hl.css  index.html  pyproject.toml
2025/when-regex-fails/examples/: benchmark.py  config.py
