[project]
name = "regfail"
version = "0.1.0"
description = "Supplementary code to go alongside the presentation"
authors = [
    {name = "karetsu",email = "20670199+karetsu@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
